LPD-98348 Register the UpdateExpirationDate bulk action type
